// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/navigation/NavigationHeader Customized 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    pointerEvents="box-none"
    style={
      Object {
        "zIndex": 1,
      }
    }
  >
    <View
      accessibilityElementsHidden={false}
      importantForAccessibility="auto"
      onLayout={[Function]}
      pointerEvents="box-none"
      style={null}
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "opacity": 1,
          }
        }
      />
      <View
        accessibilityElementsHidden={false}
        closing={false}
        gestureVelocityImpact={0.3}
        importantForAccessibility="auto"
        onClose={[Function]}
        onGestureBegin={[Function]}
        onGestureCanceled={[Function]}
        onGestureEnd={[Function]}
        onOpen={[Function]}
        onTransition={[Function]}
        pointerEvents="box-none"
        style={
          Array [
            Object {
              "overflow": undefined,
            },
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
        transitionSpec={
          Object {
            "close": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
            "open": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
          }
        }
      >
        <View
          collapsable={false}
          nativeID="animatedComponent"
          needsOffscreenAlphaCompositing={false}
          pointerEvents="box-none"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            collapsable={false}
            forwardedRef={[Function]}
            onGestureHandlerEvent={[Function]}
            onGestureHandlerStateChange={[Function]}
            style={
              Object {
                "flex": 1,
                "transform": Array [
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "backgroundColor": "rgb(242, 242, 242)",
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": -1,
                  },
                  "shadowOpacity": 0.3,
                  "shadowRadius": 5,
                  "top": 0,
                  "width": 3,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flex": 1,
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgb(242, 242, 242)",
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    onLayout={[Function]}
                    style={
                      Array [
                        Object {
                          "height": 139.09004739336493,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "zIndex": 1,
                        },
                        Object {
                          "height": 139.09004739336493,
                          "width": 750,
                        },
                        Object {
                          "backgroundColor": "#eaeaea",
                        },
                      ]
                    }
                    testID="navigation-header-test-id"
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "flex-end",
                          "bottom": 0,
                          "flexDirection": "row",
                          "height": 75.86729857819905,
                          "justifyContent": "space-between",
                          "left": 0,
                          "marginBottom": 14.225118483412324,
                          "paddingHorizontal": 30.76923076923077,
                          "position": "absolute",
                          "right": 0,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "height": 44.25592417061611,
                            "paddingRight": 3.8461538461538463,
                            "width": 96.15384615384616,
                          }
                        }
                      >
                        <View
                          accessible={true}
                          collapsable={false}
                          focusable={true}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          testID="navigation-header-test-id-back-button"
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "alignContent": "center",
                                  "backgroundColor": "#FFFFFF",
                                  "borderRadius": 30.76923076923077,
                                  "height": 84.61538461538461,
                                  "justifyContent": "center",
                                  "width": 84.61538461538461,
                                },
                                Object {
                                  "backgroundColor": "transparent",
                                  "height": 46.15384615384615,
                                  "paddingLeft": 3.8461538461538463,
                                  "width": 46.15384615384615,
                                },
                              ]
                            }
                          >
                            <Text
                              style={
                                Array [
                                  Object {
                                    "fontFamily": "mykross",
                                    "textAlign": "center",
                                  },
                                  Object {
                                    "color": "#333333",
                                    "fontSize": 24,
                                  },
                                  undefined,
                                ]
                              }
                              testID="navigation-header-test-id-back-button-icon"
                            >
                              /
                            </Text>
                          </View>
                        </View>
                      </View>
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "height": 44.25592417061611,
                            "justifyContent": "center",
                            "width": 496.1538461538462,
                          }
                        }
                      >
                        <Text
                          adjustsFontSizeToFit={true}
                          numberOfLines={1}
                          style={
                            Array [
                              Object {
                                "color": "#333333",
                                "fontFamily": "DIN2014-Demi",
                                "fontSize": 20,
                                "fontWeight": "600",
                                "lineHeight": 24,
                                "textAlign": "center",
                              },
                              Object {
                                "color": "#C63733",
                              },
                            ]
                          }
                          testID="navigation-header-test-id-title"
                        >
                          Header title
                        </Text>
                      </View>
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "height": 44.25592417061611,
                            "paddingRight": 3.8461538461538463,
                            "width": 96.15384615384616,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "justifyContent": "flex-end",
                              "width": "100%",
                            }
                          }
                          testID="navigation-header-test-id-actions-container"
                        >
                          <View
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            testID="icon-btn-test-id"
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "alignContent": "center",
                                    "backgroundColor": "#FFFFFF",
                                    "borderRadius": 30.76923076923077,
                                    "height": 84.61538461538461,
                                    "justifyContent": "center",
                                    "width": 84.61538461538461,
                                  },
                                  Object {
                                    "backgroundColor": "transparent",
                                    "height": "auto",
                                    "marginRight": 9.615384615384615,
                                    "width": "auto",
                                  },
                                ]
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "fontFamily": "mykross",
                                      "textAlign": "center",
                                    },
                                    Object {
                                      "color": "#333333",
                                      "fontSize": 24,
                                    },
                                    undefined,
                                  ]
                                }
                                testID="icon-btn-test-id-icon"
                              >
                                E
                              </Text>
                            </View>
                          </View>
                          <View
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            testID="icon-btn-test-id"
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "alignContent": "center",
                                    "backgroundColor": "#FFFFFF",
                                    "borderRadius": 30.76923076923077,
                                    "height": 84.61538461538461,
                                    "justifyContent": "center",
                                    "width": 84.61538461538461,
                                  },
                                  Object {
                                    "backgroundColor": "transparent",
                                    "height": "auto",
                                    "width": "auto",
                                  },
                                ]
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "fontFamily": "mykross",
                                      "textAlign": "center",
                                    },
                                    Object {
                                      "color": "#333333",
                                      "fontSize": 24,
                                    },
                                    undefined,
                                  ]
                                }
                                testID="icon-btn-test-id-icon"
                              >
                                W
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots components/navigation/NavigationHeader Default 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    pointerEvents="box-none"
    style={
      Object {
        "zIndex": 1,
      }
    }
  >
    <View
      accessibilityElementsHidden={false}
      importantForAccessibility="auto"
      onLayout={[Function]}
      pointerEvents="box-none"
      style={null}
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "opacity": 1,
          }
        }
      />
      <View
        accessibilityElementsHidden={false}
        closing={false}
        gestureVelocityImpact={0.3}
        importantForAccessibility="auto"
        onClose={[Function]}
        onGestureBegin={[Function]}
        onGestureCanceled={[Function]}
        onGestureEnd={[Function]}
        onOpen={[Function]}
        onTransition={[Function]}
        pointerEvents="box-none"
        style={
          Array [
            Object {
              "overflow": undefined,
            },
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
        transitionSpec={
          Object {
            "close": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
            "open": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
          }
        }
      >
        <View
          collapsable={false}
          nativeID="animatedComponent"
          needsOffscreenAlphaCompositing={false}
          pointerEvents="box-none"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            collapsable={false}
            forwardedRef={[Function]}
            onGestureHandlerEvent={[Function]}
            onGestureHandlerStateChange={[Function]}
            style={
              Object {
                "flex": 1,
                "transform": Array [
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "backgroundColor": "rgb(242, 242, 242)",
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": -1,
                  },
                  "shadowOpacity": 0.3,
                  "shadowRadius": 5,
                  "top": 0,
                  "width": 3,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flex": 1,
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgb(242, 242, 242)",
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    onLayout={[Function]}
                    style={
                      Array [
                        Object {
                          "height": 139.09004739336493,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "zIndex": 1,
                        },
                        Object {
                          "height": 139.09004739336493,
                          "width": 750,
                        },
                        undefined,
                      ]
                    }
                    testID="navigation-header-test-id"
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "flex-end",
                          "bottom": 0,
                          "flexDirection": "row",
                          "height": 75.86729857819905,
                          "justifyContent": "space-between",
                          "left": 0,
                          "marginBottom": 14.225118483412324,
                          "paddingHorizontal": 30.76923076923077,
                          "position": "absolute",
                          "right": 0,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "height": 44.25592417061611,
                            "paddingRight": 3.8461538461538463,
                            "width": 96.15384615384616,
                          }
                        }
                      >
                        <View
                          accessible={true}
                          collapsable={false}
                          focusable={true}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          testID="navigation-header-test-id-back-button"
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "alignContent": "center",
                                  "backgroundColor": "#FFFFFF",
                                  "borderRadius": 30.76923076923077,
                                  "height": 84.61538461538461,
                                  "justifyContent": "center",
                                  "width": 84.61538461538461,
                                },
                                Object {
                                  "backgroundColor": "transparent",
                                  "height": 46.15384615384615,
                                  "paddingLeft": 3.8461538461538463,
                                  "width": 46.15384615384615,
                                },
                              ]
                            }
                          >
                            <Text
                              style={
                                Array [
                                  Object {
                                    "fontFamily": "mykross",
                                    "textAlign": "center",
                                  },
                                  Object {
                                    "color": "#333333",
                                    "fontSize": 24,
                                  },
                                  undefined,
                                ]
                              }
                              testID="navigation-header-test-id-back-button-icon"
                            >
                              /
                            </Text>
                          </View>
                        </View>
                      </View>
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "height": 44.25592417061611,
                            "justifyContent": "center",
                            "width": 496.1538461538462,
                          }
                        }
                      >
                        <Text
                          adjustsFontSizeToFit={true}
                          numberOfLines={1}
                          style={
                            Array [
                              Object {
                                "color": "#333333",
                                "fontFamily": "DIN2014-Demi",
                                "fontSize": 20,
                                "fontWeight": "600",
                                "lineHeight": 24,
                                "textAlign": "center",
                              },
                              undefined,
                            ]
                          }
                          testID="navigation-header-test-id-title"
                        >
                          Header title
                        </Text>
                      </View>
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "height": 44.25592417061611,
                            "paddingRight": 3.8461538461538463,
                            "width": 96.15384615384616,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "justifyContent": "flex-end",
                              "width": "100%",
                            }
                          }
                          testID="navigation-header-test-id-actions-container"
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots components/navigation/NavigationHeader With additional buttons 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    pointerEvents="box-none"
    style={
      Object {
        "zIndex": 1,
      }
    }
  >
    <View
      accessibilityElementsHidden={false}
      importantForAccessibility="auto"
      onLayout={[Function]}
      pointerEvents="box-none"
      style={null}
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "opacity": 1,
          }
        }
      />
      <View
        accessibilityElementsHidden={false}
        closing={false}
        gestureVelocityImpact={0.3}
        importantForAccessibility="auto"
        onClose={[Function]}
        onGestureBegin={[Function]}
        onGestureCanceled={[Function]}
        onGestureEnd={[Function]}
        onOpen={[Function]}
        onTransition={[Function]}
        pointerEvents="box-none"
        style={
          Array [
            Object {
              "overflow": undefined,
            },
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
        transitionSpec={
          Object {
            "close": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
            "open": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
          }
        }
      >
        <View
          collapsable={false}
          nativeID="animatedComponent"
          needsOffscreenAlphaCompositing={false}
          pointerEvents="box-none"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            collapsable={false}
            forwardedRef={[Function]}
            onGestureHandlerEvent={[Function]}
            onGestureHandlerStateChange={[Function]}
            style={
              Object {
                "flex": 1,
                "transform": Array [
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "backgroundColor": "rgb(242, 242, 242)",
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": -1,
                  },
                  "shadowOpacity": 0.3,
                  "shadowRadius": 5,
                  "top": 0,
                  "width": 3,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flex": 1,
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgb(242, 242, 242)",
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    onLayout={[Function]}
                    style={
                      Array [
                        Object {
                          "height": 139.09004739336493,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "zIndex": 1,
                        },
                        Object {
                          "height": 139.09004739336493,
                          "width": 750,
                        },
                        undefined,
                      ]
                    }
                    testID="navigation-header-test-id"
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "flex-end",
                          "bottom": 0,
                          "flexDirection": "row",
                          "height": 75.86729857819905,
                          "justifyContent": "space-between",
                          "left": 0,
                          "marginBottom": 14.225118483412324,
                          "paddingHorizontal": 30.76923076923077,
                          "position": "absolute",
                          "right": 0,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "height": 44.25592417061611,
                            "paddingRight": 3.8461538461538463,
                            "width": 96.15384615384616,
                          }
                        }
                      >
                        <View
                          accessible={true}
                          collapsable={false}
                          focusable={true}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          testID="navigation-header-test-id-back-button"
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "alignContent": "center",
                                  "backgroundColor": "#FFFFFF",
                                  "borderRadius": 30.76923076923077,
                                  "height": 84.61538461538461,
                                  "justifyContent": "center",
                                  "width": 84.61538461538461,
                                },
                                Object {
                                  "backgroundColor": "transparent",
                                  "height": 46.15384615384615,
                                  "paddingLeft": 3.8461538461538463,
                                  "width": 46.15384615384615,
                                },
                              ]
                            }
                          >
                            <Text
                              style={
                                Array [
                                  Object {
                                    "fontFamily": "mykross",
                                    "textAlign": "center",
                                  },
                                  Object {
                                    "color": "#333333",
                                    "fontSize": 24,
                                  },
                                  undefined,
                                ]
                              }
                              testID="navigation-header-test-id-back-button-icon"
                            >
                              /
                            </Text>
                          </View>
                        </View>
                      </View>
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "height": 44.25592417061611,
                            "justifyContent": "center",
                            "width": 496.1538461538462,
                          }
                        }
                      >
                        <Text
                          adjustsFontSizeToFit={true}
                          numberOfLines={1}
                          style={
                            Array [
                              Object {
                                "color": "#333333",
                                "fontFamily": "DIN2014-Demi",
                                "fontSize": 20,
                                "fontWeight": "600",
                                "lineHeight": 24,
                                "textAlign": "center",
                              },
                              undefined,
                            ]
                          }
                          testID="navigation-header-test-id-title"
                        >
                          Header title
                        </Text>
                      </View>
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "height": 44.25592417061611,
                            "paddingRight": 3.8461538461538463,
                            "width": 96.15384615384616,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "justifyContent": "flex-end",
                              "width": "100%",
                            }
                          }
                          testID="navigation-header-test-id-actions-container"
                        >
                          <View
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            testID="icon-btn-test-id"
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "alignContent": "center",
                                    "backgroundColor": "#FFFFFF",
                                    "borderRadius": 30.76923076923077,
                                    "height": 84.61538461538461,
                                    "justifyContent": "center",
                                    "width": 84.61538461538461,
                                  },
                                  Object {
                                    "backgroundColor": "transparent",
                                    "height": "auto",
                                    "marginRight": 9.615384615384615,
                                    "width": "auto",
                                  },
                                ]
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "fontFamily": "mykross",
                                      "textAlign": "center",
                                    },
                                    Object {
                                      "color": "#333333",
                                      "fontSize": 24,
                                    },
                                    undefined,
                                  ]
                                }
                                testID="icon-btn-test-id-icon"
                              >
                                E
                              </Text>
                            </View>
                          </View>
                          <View
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            testID="icon-btn-test-id"
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "alignContent": "center",
                                    "backgroundColor": "#FFFFFF",
                                    "borderRadius": 30.76923076923077,
                                    "height": 84.61538461538461,
                                    "justifyContent": "center",
                                    "width": 84.61538461538461,
                                  },
                                  Object {
                                    "backgroundColor": "transparent",
                                    "height": "auto",
                                    "width": "auto",
                                  },
                                ]
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "fontFamily": "mykross",
                                      "textAlign": "center",
                                    },
                                    Object {
                                      "color": "#333333",
                                      "fontSize": 24,
                                    },
                                    undefined,
                                  ]
                                }
                                testID="icon-btn-test-id-icon"
                              >
                                W
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
